Parcels, Paths and Patches.css
@font-face { font-family: 'Book Antiqua';	font-weight: normal;	font-style: normal;	src: url(Book%20Antiqua.ttf);	}
@font-face { font-family: 'Book Antiqua';	font-weight: normal;	font-style: italic;	src: url(Book%20Antiqua%20Italics.ttf);	}
@font-face { font-family: 'Book Antiqua';	font-weight: bold;	font-style: normal;	src: url(Book%20Antiqua%20Bold.ttf);	}
@font-face { font-family: 'Book Antiqua';	font-weight: bold;	font-style: italic;	src: url(Book%20Antiqua%20Bold%20Italics.ttf);	}
@font-face { font-family: 'Proxima';	font-weight: 100;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Thin.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 100;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Thin%20Italic.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 300;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Light.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 300;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Light%20Italic.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 400;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Regular.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 400;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Regular%20Italic.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 600;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20SemiBold.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 600;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20SemiBold%20Italic.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 700;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Bold.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 700;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Bold%20Italic.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 800;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Extrabold.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 800;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Extrabold%20Italic.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 900;	font-style: normal;	src: url(Proxima%20Nova%20Extra%20Condensed%20Black.otf);	}
@font-face { font-family: 'Proxima';	font-weight: 900;	font-style: italic;	src: url(Proxima%20Nova%20Extra%20Condensed%20Black%20Italic.otf);	}

@font-face { font-family: 'Work Sans';	font-weight: 100;	src: url(WorkSans-Thin.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 200;	src: url(WorkSans-ExtraLight.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 300;	src: url(WorkSans-Light.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 400;	src: url(WorkSans-Regular.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 500;	src: url(WorkSans-Medium.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 600;	src: url(WorkSans-SemiBold.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 700;	src: url(WorkSans-Bold.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 800;	src: url(WorkSans-ExtraBold.otf);	}
@font-face { font-family: 'Work Sans';	font-weight: 900;	src: url(WorkSans-Black.otf);	}

* { pointer-events: none; }
#input { user-select: none; }
#input *, #div *, #ui * { pointer-events: all; }

body, svg {
	font-family: 'Book Antiqua';
	background: hsl(220, 10%, 30%);
	color: #dbdee1;
	pointer-events: none;
}
#main {
	position: absolute;
	inset: 0 0 0 0;
	width: 100vw;
	height: 100vh;
}
foreignObject>div {
	font-family: 'Work Sans';
	font-size: 24pt;
	background: hsl(220, 10%, 20%);
	position: absolute;
	inset: 0 0 0 0;
	overflow: auto;
	padding: .5cm;
}

.cw-s {
	display: flex;
	flex: 1;
	flex-direction: column;
}
.cw-s > div { padding: .2cm; }
.cw-s > div.cw-h {
	font-size: 48pt;
	font-weight: 600;
}
.cw-c { display: flex; cursor: pointer; }
.cw-c:hover { background: hsla(220, 10%, 100%, .2); }
.cw-c > div { flex-grow: 1; }
.cw-c > div:first-child { width: 2cm; flex-grow: 0; flex-shrink: 0; text-align: right; padding-right: .5cm; font-weight: 700; }
.cw-c.hl { background: hsl(220, 10%, 50%); color: white; }
.cw-c .e { opacity: .7; font-size: 14pt; }

ul, ol { margin: .5cm 0 1cm; margin-bottom: 2cm; }
ol { padding-left: 1.5cm; }
li { margin: .5cm 0; }

#input path { fill: transparent; }
#input path:hover { fill: hsla(220, 10%, 100%, .1); }

.btn { cursor: pointer; }
.btn .btn-text { transform: translate(1300px, 1300px) rotate(-10deg) scale(.75); transition: transform .1s; }
.btn:hover .btn-text { transform: translate(1300px, 1300px) rotate(-10deg); }

.ui-btn { transition: transform .1s ease-out; }
.ui-btn:hover { filter: url(#shadow); transform: scale(1.2); }

#vis>g>.thumbnail * { pointer-events: all; user-select: none; cursor: pointer; }
.step-btn { transform: scale(.8); transition: transform .147s, opacity .147s; cursor: pointer; --hue: 220; }
.step-btn:hover { transform: none; --hue: 210; }
.step-btn.sel { --hue: 70; }

@keyframes blinking-cursor {
	0%	{ opacity: 1; }
	45%	{ opacity: 1; }
	55%	{ opacity: 0; }
	100%	{ opacity: 0; }
}

.movable { transition: transform .1s; }
.movable.sel { transform: scale(1.25); filter: url(#shadow); }

text.q { animation: .47s ease-in-out alternate infinite pulsate-q; fill: hsl(38, 80%, 85%); stroke: hsl(38, 60%, 25%); paint-order: stroke; stroke-width: 10; text-anchor: middle; }

@keyframes pulsate-q {
	0%	{ transform: scale(.7); }
	100%	{ transform: scale(1.1); }
}

.fl { font-style: italic; font-weight: 300; margin: 1.5cm 0 1.5cm; }

p.kbd { font-size: 18pt; font-weight: 300; margin: 0; line-height: 2; }
p.kbd kbd { background: hsl(220, 50%, 30%); padding: .1cm .15cm; margin: 0 .1cm; font-family: inherit; font-weight: 600; text-transform: uppercase; }
p.kbd kbd:first-child { margin-left: 0; }
p.kbd kbd+span { margin-right: .4cm; }
p.kbd > span { white-space: nowrap; }

.cs { text-align: center; width: 100%; border-collapse: collapse; margin-bottom: 2cm; }
.cs td { height: 2cm; min-width: 1.5cm; }
.cs td.h { background-color: hsl(222, 10%, 15%); }
.cs td.up>span { text-orientation: mixed; writing-mode: vertical-rl; transform: rotate(180deg); }

path.tg { animation: .47s ease-in-out alternate infinite pulsate-tg; }

@keyframes pulsate-tg {
	0%	{ fill: hsl(220, 10%, 15%); }
	100%	{ fill: hsl(220, 10%, 25%); }
}

.ar .q	{	fill: hsl(220, 10%, 25%); }
.ar .a	{	fill: none; stroke: hsl(220, 20%, 80%); stroke-width: .3; opacity: .2; marker-end: url(#arrow-marker); }
.ar text	{	fill: hsl(120, 80%, 80%); opacity: 0; font-size: 1px; font-weight: 900; text-anchor: middle; }
.ar.u .q	{	fill: hsl(120, 20%, 25%); }
.ar.u .a	{	stroke: hsl(120, 40%, 70%); opacity: .5; }
.ar.u text	{	opacity: 1; }

#ans-chk>div	{ padding: 0; }
.ans-chk	{ font: inherit; font-size: 20pt; text-align: center; }
.ans-chk select	{ font: inherit; font-size: 16pt; margin-right: .25cm; }
.ans-chk input	{ font: inherit; font-size: 16pt; margin-right: .25cm; }
.ans-chk button	{ font: inherit; font-size: 16pt; padding: .1cm .25cm; background: hsl(220, 40%, 40%); border: 4px solid hsl(220, 40%, 50%); color: white; }

li.j { opacity: .4; }

